--- a/src/HnHMapperServer.Tests/HnHMapperServer.Tests.csproj
+++ b/src/HnHMapperServer.Tests/HnHMapperServer.Tests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
@@ -22,9 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\HnHMapperServer.Services\HnHMapperServer.Services.csproj" />
-    <ProjectReference Include="..\..\src\HnHMapperServer.Infrastructure\HnHMapperServer.Infrastructure.csproj" />
-    <ProjectReference Include="..\..\src\HnHMapperServer.Core\HnHMapperServer.Core.csproj" />
+    <ProjectReference Include="..\HnHMapperServer.Services\HnHMapperServer.Services.csproj" />
+    <ProjectReference Include="..\HnHMapperServer.Infrastructure\HnHMapperServer.Infrastructure.csproj" />
+    <ProjectReference Include="..\HnHMapperServer.Core\HnHMapperServer.Core.csproj" />
   </ItemGroup>
 
 </Project>
